# zpp

./: .gitignore  README.md  pyproject.toml  zpp.toml
features/: doctor_config.feature  environment.py  mcp_prompt.feature  trait_env.feature  trait_plugins.feature  trait_query.feature  trait_remote.feature  trait_sources.feature  workset_profiles.feature
features/steps/: doctor_steps.py  env_steps.py  mcp_steps.py  plugin_steps.py  profile_steps.py  query_steps.py  remote_steps.py  trait_steps.py
openspec/changes/add-zpp-mcp-server/: design.md  proposal.md  tasks.md
openspec/changes/bootstrap-drop-saucepan/: design.md  proposal.md  tasks.md
openspec/changes/bootstrap-zpp-core/: design.md  proposal.md  tasks.md
openspec/changes/config-empty-hint/: design.md  proposal.md  tasks.md
openspec/changes/configurable-doctor/: design.md  proposal.md  tasks.md
openspec/changes/plugin-traits/: design.md  proposal.md  tasks.md
openspec/changes/workset-profiles/: design.md  proposal.md  tasks.md
openspec/changes/workset-traits/: design.md  proposal.md  tasks.md
openspec/specs/environment-bootstrap/: spec.md
scripts/: bump.py
tests/: conftest.py  test_config_cli.py  test_doctor_config.py  test_governance.py  test_mcp_server.py  test_plugins.py  test_sauce.py  test_snapshot.py  test_toolchain.py  test_traits.py  test_worksets.py  test_workspace.py
zpp-mcp/: pyproject.toml
zpp-mcp/zpp_mcp/: __init__.py  prompt.py  server.py  tools.py
zpp/cli/: __init__.py  common.py  config.py  root.py  snapshot.py  trait.py  workset.py
zpp/core/: adapter.py  governance.py  plugins.py  sauce.py  sidecar.py  snapshot.py  toolchain.py  traits.py  worksets.py
zpp/traits/: commit-stage.md  coverage.md  ponytail.md  structure.md
zpp/utils/: paths.py  workspace.py
(+20 files in other folders)
