[project]
name = "zpp"
version = "0.1.0"
description = "zack's project protocol - workset governance over openspec"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "tomli-w>=1.0",
]

[project.scripts]
zpp = "zpp.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["zpp"]

[dependency-groups]
dev = ["pytest>=8"]
