[project]
name = "zpp"
version = "0.1.0"
description = "zack's project protocol - workset governance over openspec"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "tomli-w>=1.0",
]

[project.scripts]
zpp = "zpp.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["zpp"]

# zpp-mcp is a workspace member, not a core dependency: the MCP server and its
# SDK dep live there, so `uv tool install zpp` stays typer + tomli-w only.
[tool.uv.workspace]
members = ["zpp-mcp"]

[dependency-groups]
dev = [
    "behave>=1.3.3",
    "pytest>=8",
]
