[project]
name = "zpp-mcp"
version = "0.1.1"
description = "zpp governance mount served over stdio MCP - Claude Desktop chat surface"
requires-python = ">=3.11"
dependencies = [
    "zpp",
    # Stable FastMCP API. v2 (MCPServer) is beta until 2026-07-28; pin below it
    # deliberately so the server tracks the released wire format, not the beta.
    "mcp>=1.28,<2",
]

[project.scripts]
zpp-mcp = "zpp_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["zpp_mcp"]

[tool.uv.sources]
zpp = { workspace = true }
